--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,7 @@ services:
   shopping_cart:
     class: AppBundle\Store\ShoppingCart
     autowire: true
+  stripe_client:
+    class: AppBundle\StripeClient
+    autowire: true
+    arguments: ['%stripe_secret_key%']
